# rbd_client

./: CMakeLists.txt  README.md  ceph.conf  rados_client.cc  rbd_aio_discard.cc  rbd_aio_zero.cc  rbd_aio_zero2.cc  rbd_compare_and_write.cc  rbd_create.cc  rbd_diff_iterate.cc  rbd_discard.py  rbd_write.cc  rbd_write_same.cc  rbd_xcopy.cc  rbd_zero.cc
.github/workflows/: ccpp.yml
